fixed decoder for dependent methods in Independent